src/rust/type_system/snapshots/syn_state_machine__rust__type_system__types__tests__concat_idents! (parse it_matches_result).snap
---
source: src/rust/type_system/types.rs
expression: "crate::parse::<Type<P<Infallible>>>(q.clone())"
---
Ok(
    NoBounds(
        TypePath(
            HigherOrderPath {
                leading: false,
                segments: Interlace {
                    values: [
                        Generic(
                            Id(
                                Ident(
                                    Result,
                                ),
                            ),
                            GenericArgs {
                                args: Interlace {
                                    values: [
                                        Ty(
                                            NoBounds(
                                                TypePath(
                                                    HigherOrderPath {
                                                        leading: false,
                                                        segments: Interlace {
                                                            values: [
                                                                Bare(
                                                                    Id(
                                                                        Ident(
                                                                            i32,
                                                                        ),
                                                                    ),
                                                                ),
                                                            ],
                                                        },
                                                    },
                                                ),
                                            ),
                                        ),
                                        Ty(
                                            NoBounds(
                                                TypePath(
                                                    HigherOrderPath {
                                                        leading: false,
                                                        segments: Interlace {
                                                            values: [
                                                                Bare(
                                                                    Id(
                                                                        Ident(
                                                                            String,
                                                                        ),
                                                                    ),
                                                                ),
                                                            ],
                                                        },
                                                    },
                                                ),
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ),
                    ],
                },
            },
        ),
    ),
)
