src/rust/type_system/snapshots/syn_state_machine__rust__type_system__types__tests__concat_idents! (parse it_matches_slice).snap
---
source: src/rust/type_system/types.rs
expression: "crate::parse::<Type<P<Infallible>>>(q.clone())"
---
Ok(
    NoBounds(
        ReferenceType(
            ReferenceType {
                lt: None,
                mut: false,
                ty: NoBounds(
                    SliceType(
                        Bracket(
                            NoBounds(
                                TypePath(
                                    HigherOrderPath {
                                        leading: false,
                                        segments: Interlace {
                                            values: [
                                                Bare(
                                                    Id(
                                                        Ident(
                                                            u8,
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        },
                                    },
                                ),
                            ),
                            Span,
                        ),
                    ),
                ),
            },
        ),
    ),
)
